--- a/index.html
+++ b/index.html
@@ -7,11 +7,99 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/style.css">
-
+    <link rel="stylesheet" href="assets/fontawesome/css/all.css">
     <title>Hello, world!</title>
   </head>
+
   <body>
-    <h1>Hello, world!</h1>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">RT</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Dropdown
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+          </ul>
+          <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+
+    <div class="hero d-flex justify-content-center align-items-center bg-primary text-white slide">
+        <div class="hero-text">
+          <h1>This is a Road Trip</h1>
+        </div>
+    </div>
+
+    <div class="slide-1 slide bg-success d-flex justify-content-center align-items-center">
+        <div class="text-center w-75 bg-dark text-white p-5 opacity-75">
+          <h2>Lorem ipsum dolor sit amet.</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum aliquam, facere harum sint vel, maiores necessitatibus repudiandae ab ipsam fugit fuga. Eum eius molestiae autem.</p>
+          <button class="btn btn-outline-secondary">Learn More</button>
+        </div>
+    </div>
+
+    <div class="slide-2 slide bg-success d-flex justify-content-center align-items-center">
+        <div class="text-center w-75 bg-dark text-white p-5 opacity-75">
+          <h2>Lorem ipsum dolor sit amet.</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum aliquam, facere harum sint vel, maiores necessitatibus repudiandae ab ipsam fugit fuga. Eum eius molestiae autem.</p>
+          <button class="btn btn-outline-secondary">Learn More</button>
+        </div>
+    </div>
+  
+    <div class="slide-3 slide bg-success d-flex justify-content-center align-items-center">
+      <div class="text-center w-75 bg-dark text-white p-5 opacity-50">
+        <h2>Lorem ipsum dolor sit amet.</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum aliquam, facere harum sint vel, maiores necessitatibus repudiandae ab ipsam fugit fuga. Eum eius molestiae autem.</p>
+        <button class="btn btn-outline-secondary">Learn More</button>
+      </div>
+    </div>
+
+    <div class="slide-4 slide bg-success d-flex justify-content-center align-items-center">
+      <div class="text-center w-75 bg-dark text-white p-5 opacity-50">
+        <h2>Lorem ipsum dolor sit amet.</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum aliquam, facere harum sint vel, maiores necessitatibus repudiandae ab ipsam fugit fuga. Eum eius molestiae autem.</p>
+        <button class="btn btn-outline-secondary">Learn More</button>
+      </div>
+    </div>
+
+    <footer class="d-flex justify-content-center align-items-center flex-column bg-success">
+        <h3>CONTACT</h3>
+        <div class="icons text-dark">
+            <a href="https://www.facebook.com" target="_blank">
+                <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="https://www.twitter.com" target="_blank">
+                <i class="fa-brands fa-twitter"></i>
+            </a>
+            <a href="https://www.instagram.com" target="_blank">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+        </div>
+        <p>© iAk Designs. Design <a href="#">Parallax</a>. Images <a href="https://www.pexels.com/">Pexels</a>.</p>
+    </footer>
+
 
     <!-- Optional JavaScript; choose one of the two! -->
 
